# openmensa-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test_and_push.yml
examples/: canteens.rs  days.rs  meals.rs
src/: canteen.rs  day.rs  error.rs  lib.rs  meal.rs  price.rs
src/request/: canteen_request.rs  day_request.rs  meal_request.rs  mod.rs
