[package]
name = "openmensa-rs"
version = "0.1.1-alpha.0"
authors = ["Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "A library to interact with the openmensa api"
keywords = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/jwuensche/openmensa-rs"
documentation = "https://docs.rs/openmensa-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
failure = "0.1.6"
serde = { version = "^1.0", features = ["derive"] }
http = "0.1.19"
url = "2.1.0"
serde_urlencoded = "0.6.1"
getset = "0.0.9"
serde_json = "1.0.41"
surf = "1.0.3"

[dev-dependencies]
tokio = { version="^0.2", features= ["macros"] }

[badges]
travis-ci = { repository = "jwuensche/openmensa-rs" }
