[package]
name = "openmensa-rs"
version = "0.2.0"
authors = ["Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "A library to interact with the openmensa api"
keywords = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/jwuensche/openmensa-rs"
documentation = "https://docs.rs/openmensa-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
failure = "0.1.6"
getset = "0.0.9"
reqwest = "0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"
url = "2.1"

[dev-dependencies]
tokio = { version="^0.2", features= ["macros"] }

[badges]
travis-ci = { repository = "jwuensche/openmensa-rs" }
