[package]
name = "openmensa-rs"
version = "0.3.1-alpha.0"
authors = ["Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "A library to interact with the openmensa api"
keywords = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/jwuensche/openmensa-rs"
documentation = "https://docs.rs/openmensa-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
getset = "0.1.1"
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
thiserror = "1.0.25"
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["full"] }

[badges]
travis-ci = { repository = "jwuensche/openmensa-rs" }
